# pirate-game-4

./: .gitattributes  .gitignore  BRIGANTINE_PHYSICS_REFERENCE.md  CLIENT_CANNON_STATUS.md  CLIENT_CHANGES_REQUIRED.md  COMPLETE_MODIFICATION.py  COORDINATE_TRANSFORM_VERIFICATION.md  DEFERRED.md  DEPLOYMENT_STRATEGY.md  FINAL_FIX.py  MODULE_COORDINATE_INCONSISTENCY.md  PHASE1_WINDOWS_SETUP.md  PROTOCOL_USAGE.md  README.md  SHARED_ROADMAP.md  create_cannon_fire.py  data_structruce.md  do_extraction.py  do_modify.py  final_modify.py  fix_wss.bat  fix_wss.py  fix_wss.sh  fix_wss_proper.py  modify_wss.py  package-lock.json  remove_if0_blocks.py  run_fix.bat  run_fix.py  server_output.txt  setup-emscripten-windows.ps1  setup-phase1-windows.bat  setup-shared-wasm.sh  simple_modify.py
.github/: copilot-instructions.md
client/: .env.example  .env.production  WEBSOCKET_CONFIG.md  brigantine-tester.html  index.html  island-editor.html  map-editor.html  package-lock.json  package.json  protocol-test-standalone.html  protocol-test.html  tsconfig.json  vite.config.ts  world-editor.html
docs/: BRANCHING.md  BRIGANTINE_SPECIFICATION.md  CLIENT_BRIGANTINE_PHYSICS_GUIDE.md  CLIENT_CANNON_IMPLEMENTATION.md  CLIENT_FPS_OPTIMIZATION_PROMPT.md  CLIENT_HYBRID_IMPLEMENTATION.md  CLIENT_MODULE_INTEGRATION.md  CONTROLS_QUICK_REFERENCE.md  DEPLOYMENT.md  ENHANCED_GAME_STATE.md  HYBRID_INPUT_PROTOCOL.md  LOOT_QUALITY_SYSTEM.md  MODULE_ARCHITECTURE_DIAGRAM.md  MODULE_DATA_QUICK_REF.md  MODULE_FORMAT_EXAMPLE.json  MODULE_IMPLEMENTATION_STATUS.md  MODULE_NETWORK_IMPLEMENTATION.md  MODULE_NETWORK_PROTOCOL.md  NETWORK_TESTING_PROMPT.md  PLAYER_SHIP_ARCHITECTURE.md  PROTOCOL.md  PROTOCOL_COMPLIANCE_UPDATE.md  PROTOCOL_SPECIFICATION.md  PROTOCOL_UPDATE_LOG.md  SHIP_CONTROLS.md  SSL_SETUP.md  TESTING_GUIDE.md  WEBSOCKET_CLIENT_PROTOCOL.md  WEBSOCKET_QUICK_REFERENCE.md  architecture.md  client-side-prediction.md
perf-reports/: 2026-06-14.md  2026-06-15.md  2026-06-16.md  (+21 more)
server/: ACTION_PLAN.md  ADMIN_PANEL.md  BRIGANTINE_PHYSICS_INTEGRATION.md  CMakeLists.txt  MIGRATION_PLAN.md  MODULE_INTERACT_HANDLER.md  MOUNT_HELM_FEATURE.md  MOUSE_CONTROLS_SPEC.md  Makefile  Makefile.week3-4  NETWORK_INTEGRATION_COMPLETE.md  OPTIMIZATION_IMPLEMENTATION_STATUS.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_MONITORING_INTEGRATION.md  PHASE1_COMPLETE.md  PORTS.md  README.md  VPS_PORT_SETUP.md  WEEK1_STATUS.md  WEEK2_STATUS.md  WEEK3_4_INTEGRATION_SUMMARY.md  admin_demo.html  build.sh  configure-ports.sh  demo_admin_panel.sh  demo_animated.sh  demo_apis.sh  demo_complete.sh  demo_live.sh  optimized_computations.md  run_with_valgrind.sh  server_output.txt  setup-server.sh  setup_ssl.sh  simple_week3_4_demo.c  test_full_integration.c  test_message_client.html  test_module_protocol.sh  test_modules_client.js  test_websocket_modules.html  (+5 more)
server/auth/: package-lock.json  package.json
server/auth/src/: db.ts  index.ts  jwt.ts
server/auth/src/routes/: auth.ts
server/build_debug/: pirate-server  test-enhanced-sim
server/config/: auth.env  auth.env.example  server.conf
server/data/: dynamic_companies.json  ghost_spawns.json
server/data/islands/: island_2.json  island_3.json  island_4.json  island_5.json  island_6.json  islands.json
server/data/islands/templates/: continental.json  crescent.json
server/data/saves/: world_state.json
server/data/saves/archive/: world_2026-04-26_15-17-54.json  world_2026-04-26_17-40-01.json  world_2026-04-26_18-39-25.json  world_2026-04-26_22-17-28.json  world_2026-05-08_20-18-18.json  world_2026-05-08_21-17-42.json  world_2026-05-09_10-20-12.json  world_2026-05-09_18-21-41.json  world_2026-05-09_19-21-05.json  world_2026-05-10_14-13-42.json
server/docs/: JWT_SECRET.md
server/include/: input_validation.h  protocol.h  rewind_buffer.h  server.h
server/include/admin/: admin_server.h
server/include/aoi/: grid.h
server/include/core/: hash.h  math.h  memory_pool.h  performance_monitor.h  rng.h  server_stats.h
server/include/net/: bucket_bail.h  cannon_fire.h  claim.h  crafting.h  dock_physics.h  harvesting.h  jwt_verify.h  module_interactions.h  network.h  npc_agents.h  npc_world.h  player_movement.h  player_persistence.h  protocol.h  quality.h  quality_payload.h  reliability.h  ship_chest_resources.h  ship_control.h  ship_init.h  ship_plank_wreckage.h  ship_schematics.h  snapshot.h  structure_index.h  structures.h  websocket_auth.h  websocket_protocol.h  websocket_server.h  websocket_server_internal.h
server/include/sim/: deck_utils.h  island.h  module_ids.h  module_types.h  physics_lod.h  ship_level.h  simulation.h  types.h  world_save.h
server/include/util/: log.h  time.h
server/player_saves/: test.json
server/src/: main.c  server.c  test_enhanced_simulation.c
server/src/admin/: admin_api.c  admin_server.c  admin_server_old.c
server/src/aoi/: grid.c
server/src/core/: hash.c  input_validation.c  math.c  memory_pool.c  performance_monitor.c  rewind_buffer.c  rng.c  server.c  server_stats.c
server/src/net/: bucket_bail.c  cannon_fire.c  claim.c  crafting.c  dock_physics.c  harvesting.c  module_interactions.c  network.c  network_simple.c  network_stubs.c  npc_agents.c  npc_world.c  player_movement.c  player_persistence.c  protocol.c  quality.c  reliability.c  ship_chest_resources.c  ship_control.c  ship_init.c  ship_plank_wreckage.c  ship_schematics.c  snapshot.c  structure_index.c  structures.c  websocket_auth.c  websocket_protocol.c  websocket_server.c
server/src/sim/: deck_utils.c  island_data.c  island_loader.c  module_types.c  physics_lod.c  ship_level.c  simulation.c  world_save.c
server/src/util/: log.c  time.c
server/tests/: README_ws_load_bot.md  bot_client.c  test_bucket_bail.c  test_determinism.c  test_protocol.c  test_sim_destroy_entity_sort.c  test_simulation.c  test_tombstone_blob_copy.c  ws_load_bot.mjs
shared/: CMakeLists.txt  README.md  wasm-bridge.c
shared/include/: collision.h  pirate_fixed.h  pirate_math.h  ship_physics.h
shared/sim/: collision.c  fixed.c  math.c  ship_physics.c
shared/tests/: test_collision.c  test_fixed.c  test_math.c
(+131 files in other folders)
